Fix overlapping of .content-item-options and .move-handle for todos

--- a/app/assets/stylesheets/application/todos.css.sass
+++ b/app/assets/stylesheets/application/todos.css.sass
@@ -38,7 +38,7 @@
       content: "\f0dc"
       color: #aaa
   .content-item-options
-    width: 70px
+    width: 64px
     left: -40px
     margin-top: -8px
     ul.nav.nav-pills
